--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "@types/node": "^13.9.5",
     "@types/react": "^16.9.26",
+    "now": "^17.1.1",
     "typescript": "^3.8.3"
   }
 }
